3.2/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  template:
    spec:
      containers:
        - name: todo-app
          image: prachishah0105/todo-app:v1.1 # Ensure your code uses process.env.BACKEND_URL
