3.2/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: NodePort # <--- UPDATE THIS LINE HERE
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
